--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -1,26 +1,12 @@
-name: Planets-Kotlin
+name: CI
 # This workflow is triggered on pushes to the repository master branch.
 on:
   push:
     branches: [ master ]
 
 jobs:
-  
+
   build:
-    name: Build app
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Build with Gradle
-      run: ./gradlew build
-
-
-  apk:
     name: Generate APK
     runs-on: ubuntu-latest
 
@@ -32,11 +18,11 @@ jobs:
           java-version: 1.8
 
       - name: Assemble app debug APK
-        run: bash ./gradlew assembleDebug --stacktrace
+        run: bash ./gradlew :app:assembleDebug --stacktrace
         
       - name: Upload app APK
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         with:
-          name: app-debug
+          name: planets-debug
           path: app/build/outputs/apk/debug/app-debug.apk
 
