--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,34 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext{
+        gradle_version = "4.0.0-rc01"
+        kotlin_version = "1.3.72"
+
+        compileSdkVersion = 29
+        minSdkVersion = 21
+        targetSdkVersion = 29
+
+        appcompat_verstion = "1.1.0"
+        ktx_version = "1.2.0"
+        constraintlayout_version = "1.1.3"
+        junit_version = "4.12"
+        extJunit_version = "1.1.1"
+        espresson_version = "3.2.0"
+        recyclerview_version = "1.1.0"
+        retrofit_version = "2.8.1"
+        retrofit_gson_version = "2.8.1"
+        timber_version = "4.7.1"
+        glide_version = "4.11.0"
+        glide_compiler_version = "4.11.0"
+    }
+
     repositories {
         mavenCentral()
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0-rc01"
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
