--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -2,7 +2,7 @@ name: CI
 # This workflow is triggered on pushes to the repository master branch.
 on:
   push:
-    branches: [ master ]
+    branches: [ dev ]
 
 jobs:
 
