--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
         timber_version = "4.7.1"
         glide_version = "4.11.0"
         glide_compiler_version = "4.11.0"
+        firebase_analytics_version = "17.4.2"
     }
 
     repositories {
@@ -30,6 +31,10 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.1.1'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
